...
    func selectCurrency(currency: Currency, _ completion: @escaping(Result<Bool, Error>) -> Void)
    func convertFromGBP(ammount: Double) -> Double?
    func twoCurrenciesPriceString(price: Double) -> String
}

enum Currency: String, CaseIterable {
    case GBP
    case EUR
    case USD
    case CHF
    case SEK
}

class CurrencyService: CurrencyConverting {
...
